--- a/signup.html
+++ b/signup.html
@@ -135,7 +135,7 @@ margin-left: 4px;
 							<div class="input-group-prepend">
 								<span class="input-group-text"><i class="fas fa-user"></i></span>
 							</div>
-							<input type="text" class="form-control" name="username" placeholder="username">
+							<input type="text" class="form-control" name="username" placeholder="username" autocomplete="off">
 
 						</div>
 						<div class="input-group form-group">
@@ -148,7 +148,7 @@ margin-left: 4px;
 							<div class="input-group-prepend">
 								<span class="input-group-text"><i class="fas fa-user"></i></span>
 							</div>
-							<input type="email" class="form-control" name="mail_id" placeholder="e-mail">
+							<input type="email" class="form-control" name="mail_id" placeholder="e-mail" autocomplete="off">
 
 						</div>
 						<div class="form-group">
